Fix overflow masthead

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -16,7 +16,7 @@
   -webkit-animation-delay: 0.15s;
           animation-delay: 0.15s;
   z-index: 20;
-  overflow: hidden;
+
 
   /* Onda animada en la parte inferior del navbar */
   &::after {
